--- a/app/src/main/res/layout/include_survey_toolbar.xml
+++ b/app/src/main/res/layout/include_survey_toolbar.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <android.support.v7.widget.Toolbar
-        android:id="@+id/login_toolbar"
+        android:id="@+id/survey_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="#f6f6f6">
@@ -16,8 +16,7 @@
             android:layout_marginBottom="16dp"
             android:background="#00000000"
             android:src="@drawable/btn_back"
-            android:id="@+id/common_toolbar_back"
-            />
+            android:id="@+id/survey_toolbar_back" />
 
         <TextView
             android:id="@+id/login_toolbar_title_textview"
@@ -38,7 +37,7 @@
             android:layout_gravity="end"
             android:background="#00000000"
             android:src="@drawable/btn_send"
-            android:id="@+id/coomm_toolbar_send"/>
+            android:id="@+id/survey_toolbar_send"/>
 
     </android.support.v7.widget.Toolbar>
     <LinearLayout
