--- a/app/src/main/res/layout/activity_normal_join.xml
+++ b/app/src/main/res/layout/activity_normal_join.xml
@@ -128,7 +128,7 @@
                         android:maxLines="1"
                         android:paddingLeft="16dp"
                         android:singleLine="true"
-                        android:textColor="@color/emailInput"
+                        android:textColor="@color/pwInput"
                         android:textColorHint="@color/account_accountmanage_password_input_hint_color"
                         android:textSize="17sp" />
 
