--- a/app/src/main/res/layout/item_recyclerview_gift_manger.xml
+++ b/app/src/main/res/layout/item_recyclerview_gift_manger.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="54dp"
+        android:id="@+id/item_gift_manager_mainframe_linearlayout"
         android:orientation="horizontal">
 
         <LinearLayout
