--- a/app/src/main/res/layout/include_gift_manage_toolbar.xml
+++ b/app/src/main/res/layout/include_gift_manage_toolbar.xml
@@ -35,6 +35,7 @@
             android:layout_marginBottom="16dp"
             android:layout_gravity="end"
             android:background="#00000000"
+            android:visibility="gone"
             android:src="@drawable/btn_done"
             android:id="@+id/gift_manage_toolbar_done"/>
 
