--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,20 +1,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/common_bg_color1"
     android:fitsSystemWindows="true">
     <android.support.v7.widget.Toolbar
+        xmlns:app="schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:id="@+id/image_fragment_toolbar">
+        android:id="@+id/image_fragment_toolbar"
+
+        android:contentInsetLeft="0dp"
+        android:contentInsetStart="0dp"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp"
+        android:contentInsetRight="0dp"
+        android:contentInsetEnd="0dp"
+        app:contentInsetRight="0dp"
+        app:contentInsetEnd="0dp"
+        custom:contentInsetStart="0dp">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+            android:layout_height="?attr/actionBarSize"
+            android:contentInsetLeft="0dp"
+            android:contentInsetStart="0dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp"
+            android:contentInsetRight="0dp"
+            android:contentInsetEnd="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetEnd="0dp">
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:layout_marginLeft="16dp"
                 android:layout_centerVertical="true"
                 android:src="@drawable/ic_arrow_back_black_48dp"
                 android:id="@+id/detail_toolbar_back_button"/>
@@ -24,7 +45,7 @@
                 android:layout_centerInParent="true"
                 android:id="@+id/detail_town_title_textview"
                 android:text="@string/detail_toolbar_town_name_textview"
-                android:textSize="14sp"
+                android:textSize="19sp"
                 android:textColor="@color/town_subtitle_text_color"/>
             </RelativeLayout>
     </android.support.v7.widget.Toolbar>
