--- a/app/src/main/res/layout/activity_gift.xml
+++ b/app/src/main/res/layout/activity_gift.xml
@@ -55,6 +55,7 @@
                 android:hint="@string/gift_phone_text"
                 android:maxLines="1"
                 android:paddingLeft="16dp"
+                android:inputType="phone"
                 android:singleLine="true"
                 android:textColor="@color/emailInput"
                 android:textColorHint="@color/account_accountmanage_password_input_hint_color"
